# AtomEngine

./: .gitignore  ATOM.cpp  ATOM.h  CMakeLists.txt  LICENSE  README.md  xmake.lua
.github/workflows/: macos-build.yml  macos-lib.yml
examples/: hello_world.cpp
examples/hello_world/: HelloWorld  hello_world.cpp
include/: Atom.h  AtomEngine.h  AtomEngine.hpp  MessagePrinter.h
include/renderer/api/: RendererAPI.h
src/: Atom.cpp  AtomEngine.cpp  MessagePrinter.cpp
src/Atom/: Atom.cpp  Atom.h
src/renderer/api/: RendererAPI.cpp
src/renderer/api/metal/: MetalRenderer.mm
